miniextendr-macros/tests/ui/derive_dataframe_struct_unnamed_fields.stderr
error: DataFrameRow only supports structs with named fields
 --> tests/ui/derive_dataframe_struct_unnamed_fields.rs:6:8
  |
6 | struct Bad(f64, i32);
  |        ^^^
